# TGJGGJ24

./: .gitignore  icon.svg.import
godot/: GooseCanonSpritesheet.gd  GooseStaminabar.gd  Happy_mountains.bmp.import  MainMenu.tscn  Stoppsnubbe.png.import  maiCD75.tmp  main.tres  main.tscn  project.godot  shoot_text.tscn  sittingGoose.gd  tankity.gdextension  tile.tscn
godot/gfx/: Atmoshpere.png.import  Flappy_Goose_Curling_D_titlescreen.png.import  Goose_canon_spritesheet.png.import  Goose_sky.bmp.import  Goose_staminabar.png.import  Goose_tilesheet.png.import  Goose_title_dance_animation.png.import  Happy_mountain2.bmp.import  Happy_mountain3.bmp.import  Happy_mountains.bmp.import  Hawk.png.import  Plane.bmp.import  Stoppsnubbe.png.import
godot/gfx/gooseDance/: Goose_title_dance_animation.png.import
godot/gfx/gooseDive/: Goose_dive.bmp.import  gooseDive.anim  gooseDive1.tres  gooseDive2.tres  gooseDive3.tres
godot/gfx/gooseFly/: Goose_fly.bmp.import  goosefly1.tres  goosefly2.tres  goosefly3.tres
godot/gfx/gooseIdle/: Goose1.wav.import  Goose2.wav.import  Goose3.wav.import  Goose4.wav.import  Goose5.wav.import  (+1 more)
godot/prefabs/: goose.tscn  plane.tscn  stoppsnubbe.tscn  tile.tscn  tileScript.tres.gd
godot/sfx/: Goose1.wav.import  Goose2.wav.import  Goose3.wav.import  Goose4.wav.import  Goose5.wav.import  geese-cackle-31344.mp3.import  goose-2-28880.mp3.import
rust/: Cargo.toml  rust-toolchain.toml  wasm_build.sh
rust/src/: action_indicator.rs  cam.rs  collectable.rs  collection_manager.rs  goose.rs  lib.rs  rope.rs  tank.rs  vec2_panel.rs
(+6 files in other folders)
