# cargo-features = ["experimental-wasm"]

[package]
name = "tankity"
version = "0.1.1"
edition = "2021"




[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

# [dependencies]
# godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-wasm"] }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]